<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/h_gd_5"
        app:layout_constraintGuide_percent="0.05"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/h_gd_40"
        app:layout_constraintGuide_percent="0.4"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/v_gd_5"
        app:layout_constraintGuide_percent="0.05"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/v_gd_95"
        app:layout_constraintGuide_percent="0.95"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/h_gd_10"
        app:layout_constraintGuide_percent="0.1"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/h_gd_30"
        app:layout_constraintGuide_percent="0.3"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/h_gd_35"
        app:layout_constraintGuide_percent="0.35"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/v_gd_55"
        app:layout_constraintGuide_percent="0.55"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/v_gd_33"
        app:layout_constraintGuide_percent="0.33"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/v_gd_35"
        app:layout_constraintGuide_percent="0.35"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/v_gd_65"
        app:layout_constraintGuide_percent="0.65"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/v_gd_67"
        app:layout_constraintGuide_percent="0.67"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/h_gd_60"
        app:layout_constraintGuide_percent="0.6"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/h_gd_70"
        app:layout_constraintGuide_percent="0.7"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/v_gd_47"
        app:layout_constraintGuide_percent="0.47"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/v_gd_50"
        app:layout_constraintGuide_percent="0.5"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/h_gd_75"
        app:layout_constraintGuide_percent="0.75"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/h_gd_85"
        app:layout_constraintGuide_percent="0.85"/>
    <View
        android:layout_height="0dp"
        android:layout_width="0dp"
        app:layout_constraintTop_toTopOf="@+id/h_gd_5"
        app:layout_constraintBottom_toBottomOf="@+id/h_gd_40"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/blue" />
    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@+id/h_gd_10"
        app:layout_constraintBottom_toBottomOf="@+id/h_gd_30"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/school" />
    <TextView
        android:drawableTop="@drawable/baseline_calendar_month_24"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/orange"
        android:text="@string/mark_attendance"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:gravity="center"
        android:textSize="@dimen/sp_20"
        app:layout_constraintTop_toTopOf="@+id/h_gd_35"
        app:layout_constraintBottom_toBottomOf="@+id/v_gd_55"
        app:layout_constraintEnd_toEndOf="@+id/v_gd_33"
        app:layout_constraintStart_toStartOf="@+id/v_gd_5"/>
    <TextView
        android:id="@+id/tvShowAttendance"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/pink"
        android:drawableTop="@drawable/baseline_grading_24"
        android:text="@string/show_attendance"
        android:textAlignment="center"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_20"
        app:layout_constraintTop_toTopOf="@+id/h_gd_35"
        app:layout_constraintBottom_toBottomOf="@+id/v_gd_55"
        app:layout_constraintStart_toStartOf="@+id/v_gd_35"
        app:layout_constraintEnd_toEndOf="@+id/v_gd_65"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/light_blue"
        android:drawableTop="@drawable/baseline_menu_book_24"
        android:text="@string/home_work"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="@dimen/sp_20"
        app:layout_constraintStart_toStartOf="@id/v_gd_67"
        app:layout_constraintTop_toTopOf="@id/h_gd_35"
        app:layout_constraintBottom_toBottomOf="@id/v_gd_55"
        app:layout_constraintEnd_toEndOf="@+id/v_gd_95"/>
    <TextView
        android:id="@+id/tvGallery"
        android:drawableRight="@drawable/baseline_photo_album_24"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/light_pink"
        android:text="@string/gallery"
        android:textColor="@color/pink"
        android:textSize="@dimen/sp_20"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="@id/h_gd_60"
        app:layout_constraintStart_toStartOf="@id/v_gd_5"
        app:layout_constraintBottom_toBottomOf="@+id/h_gd_70"
        app:layout_constraintEnd_toEndOf="@id/v_gd_47"/>
    <TextView
        android:drawableRight="@drawable/baseline_message_24"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/light_green"
        android:text="@string/notice"
        android:textColor="@color/green"
        android:gravity="center"
        android:textSize="@dimen/sp_20"
        app:layout_constraintStart_toStartOf="@id/v_gd_50"
        app:layout_constraintTop_toTopOf="@id/h_gd_60"
        app:layout_constraintBottom_toBottomOf="@id/h_gd_70"
        app:layout_constraintEnd_toEndOf="@id/v_gd_95"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/lighter_blue"
        android:text="@string/pay_fees"
        android:textColor="@color/blue"
        android:textSize="@dimen/sp_20"
        android:gravity="center"
        android:drawableRight="@drawable/baseline_attach_money_24"
        app:layout_constraintTop_toTopOf="@id/h_gd_75"
        app:layout_constraintStart_toStartOf="@id/v_gd_5"
        app:layout_constraintBottom_toBottomOf="@+id/h_gd_85"
        app:layout_constraintEnd_toEndOf="@+id/v_gd_47"/>
    <TextView
        android:drawableRight="@drawable/baseline_help_24"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:background="@color/light_orange"
        android:text="@string/about"
        android:textColor="@color/dark_orange"
        android:textSize="@dimen/sp_20"
        app:layout_constraintStart_toStartOf="@id/v_gd_50"
        app:layout_constraintEnd_toEndOf="@id/v_gd_95"
        app:layout_constraintTop_toTopOf="@id/h_gd_75"
        app:layout_constraintBottom_toBottomOf="@id/h_gd_85"/>
</androidx.constraintlayout.widget.ConstraintLayout>